# Programacion-C-Clase3

./: .gitignore
ejemplos/1/: Makefile  coche.c  concesionario.c
ejemplos/5/: fopclo.c
ejemplos/6/: fgetc.c
ejemplos/7/: fgets.c
ejemplos/8/: freadwrite.c
ejemplos/9/: fprintf.c
ejemplos/patches/: 0001-Se-corrigen-errores-de-algunos-de-los-ejemplos.patch
ejercicios/1/: README.md  configure.ac  makefile_simple
ejercicios/1/parches/: 0001-Ejercicio-1-gestor-tareas-usando-listas.patch
ejercicios/1/src/: Makefile.am  gestor_tareas_listas.c  gestor_tareas_listas.h  main.c  tarea_listas.c  tarea_listas.h
ejercicios/2/: README.md  configure.ac
ejercicios/2/patches/: 0001-Se-corrigen-errorres-de-Coding-style-y-del-README.patch
ejercicios/2/src/: Makefile  Makefile.am  coche.c  concesionario.c  main.c
ejercicios/3/: README.md  configure.ac
ejercicios/3/include/: coche.h
ejercicios/3/src/: Makefile.am  Makefile_old  coche.c  concesionario.c  concesionario.xml  main.c
